<?xml version="1.0"?>
<package format="2">
  <name>first_task</name>
  <version>0.0.1</version>
  <description>First node</description>

  <maintainer email="250256@edu.p.lodz.pl">adrian</maintainer>
  <license>BSD</license>
  <author email="250256@edu.p.lodz.pl">Adrian Lipka</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
